# opendart

./: .env.example  .env.schema  .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  RELEASING.md  ROADMAP.md  ROADMAP_RUST.md  go.mod  go.sum  package-lock.json  package.json  release-please-config.json  skills-lock.json
.github/: pull_request_template.md
.github/workflows/: guide-drift-notify.yml  guide-drift.yml  live-conformance-notify.yml  live-conformance.yml  release-please.yml  verify.yml
cmd/opendart-tool/: main.go
docs/api/: auditor.md
docs/api/evidence/: README.md  auditor-2026-07-18.json
docs/decisions/: 0001-go-repository-tooling.md  0002-public-rust-sdk.md  0003-agent-first-opendart-cli.md
docs/opendart/: .opendart-spec-output  README.md  openapi.yaml
docs/opendart/components/: schemas.yaml
docs/plans/: credentialed-probes.md  go-only-tooling-cleanup.md  go-tooling-migration.md  guide-drift.md  live-conformance.md  maintenance-automation.md  opendart-specification.md  specification.md
docs/plans/rust-sdk/: README.md  generation.md  public-contract.md  repository-layout.md  transport-and-safety.md  verification-and-release.md
docs/rust-cli/: architecture.md  public-contract.md  verification-and-release.md
docs/rust-sdk/: generation.md  public-contract.md  repository-layout.md  transport-and-safety.md  verification-and-release.md
internal/auditorprobe/: evidence.go  evidence_test.go  probe.go  probe_test.go
internal/cli/: run.go  run_test.go  sync_options.go  sync_options_test.go
internal/crateverification/: verify.go  verify_test.go
internal/driftnotifier/: notifier.go  notifier_test.go
internal/guide/: acquire.go  acquire_test.go  catalog.go  catalog_test.go  compatibility.go  compatibility_test.go  drift.go  drift_acquire.go  drift_acquire_test.go  drift_report.go  drift_test.go  generate.go  generate_test.go  html.go  html_test.go  model.go  publish.go  publish_test.go  request_constraints.go  request_constraints_test.go  staging.go  staging_test.go  sync.go  sync_test.go
internal/guide/testdata/: detail.html
internal/liveconformance/: cases.go  cases_inventory.go  cases_test.go  discovery.go  model.go  preflight.go  report.go  report_test.go  repository.go  run.go  run_test.go
internal/livenotifier/: notifier.go  notifier_test.go
internal/liveprobe/: http.go  http_test.go
internal/multicompanyprobe/: probe.go  probe_test.go
internal/openapi/: bundle.go  bundle_test.go  document.go  document_test.go  lint.go  lint_parity_test.go  lint_test.go  operations.go  operations_test.go  sdk_surface.go  sdk_surface_classification_test.go  sdk_surface_internal_test.go  sdk_surface_test.go
internal/releaseguard/: check.go  check_test.go
internal/sdkgen/: generate.go  generate_test.go
internal/sdkgen/model/: artifacts.go  artifacts_internal_test.go  artifacts_test.go  model.go  model_test.go
internal/sdkgen/ownership/: marker.go
internal/sdkgen/rust/: cli_render.go  cli_render_test.go  render.go  render_test.go
internal/verification/: verify.go  verify_test.go
openapi/: .opendart-spec-output  openapi.yaml  redocly.yaml
openapi/paths/ds001/: company.json.yaml  company.xml.yaml  corpCode.xml.yaml  document.xml.yaml  list.json.yaml  list.xml.yaml
openapi/paths/ds002/: accnutAdtorNmNdAdtOpinion.json.yaml  accnutAdtorNmNdAdtOpinion.xml.yaml  accnutAdtorNonAdtServcCnclsSttus.json.yaml  accnutAdtorNonAdtServcCnclsSttus.xml.yaml  adtServcCnclsSttus.json.yaml  adtServcCnclsSttus.xml.yaml  alotMatter.json.yaml  alotMatter.xml.yaml  cndlCaplScritsNrdmpBlce.json.yaml  cndlCaplScritsNrdmpBlce.xml.yaml  cprndNrdmpBlce.json.yaml  cprndNrdmpBlce.xml.yaml  detScritsIsuAcmslt.json.yaml  detScritsIsuAcmslt.xml.yaml  drctrAdtAllMendngSttusGmtsckConfmAmount.json.yaml  drctrAdtAllMendngSttusGmtsckConfmAmount.xml.yaml  drctrAdtAllMendngSttusMendngPymntamtTyCl.json.yaml  drctrAdtAllMendngSttusMendngPymntamtTyCl.xml.yaml  empSttus.json.yaml  empSttus.xml.yaml  entrprsBilScritsNrdmpBlce.json.yaml  entrprsBilScritsNrdmpBlce.xml.yaml  exctvSttus.json.yaml  exctvSttus.xml.yaml  hmvAuditAllSttus.json.yaml  hmvAuditAllSttus.xml.yaml  hmvAuditIndvdlBySttus.json.yaml  hyslrChgSttus.xml.yaml  (+32 more)
plans/: go-only-tooling-cleanup.md  go-tooling-migration.md
plans/main/: go-only-tooling-cleanup.md  go-tooling-migration.md
plans/rust/: public-opendart-cli.md
scripts/: check-opendart-bundle.mjs  check-opendart.mjs  probe-multi-company.mjs  release-please.test.mjs  sync-opendart.mjs  sync-opendart.test.mjs  with-opendart-env
sdk/rust/: Cargo.toml  README.md  opendart-cli-package-files.txt  package-files.txt
sdk/rust/compat/reqwest-feature-unification/: Cargo.toml  opendart_bridge.rs
sdk/rust/compat/reqwest-feature-unification/src/: lib.rs
sdk/rust/crates/opendart/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust/crates/opendart-cli/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
sdk/rust/crates/opendart-cli/src/: app.rs  artifact.rs  command.rs  discovery.rs  error.rs  execution.rs  main.rs  output.rs  prepared.rs
sdk/rust/crates/opendart-cli/tests/: binary_loopback.rs  discovery.rs  live_smoke.rs  structured_loopback.rs
sdk/rust/crates/opendart-cli/tests/common/: mod.rs
sdk/rust/crates/opendart-cli/tests/fixtures/: company-json-success.json  company-xml-success.json  invalid-invocation.json  missing-api-key.json
sdk/rust/crates/opendart/src/: client.rs  error.rs  lib.rs  operations.rs  provenance.rs  validation.rs
sdk/rust/crates/opendart/src/request/: mod.rs
sdk/rust/crates/opendart/src/wire/: decode.rs  inspect.rs  mod.rs  serialize.rs
sdk/rust/crates/opendart/tests/: public_contract.rs
tasks/: guide-drift.md  live-conformance.md  public-rust-sdk.md
tasks/main/: guide-drift-progress.md  guide-drift.md  live-conformance-progress.md  live-conformance.md
tasks/rust/: opendart-cli-prebuilt-releases.md  public-rust-sdk.md
tools/openapi/: check-opendart-bundle.mjs  check-opendart.mjs  package-lock.json  package.json  probe-multi-company.mjs  probe-multi-company.test.mjs  sync-opendart.mjs
(+356 files in other folders)
