[workspace]
members = ["crates/opendart", "crates/opendart-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/cpaikr/opendart"

[workspace.dependencies]
bytes = "1.12.1"
clap = "4.6.2"
form_urlencoded = "1.2.2"
futures-core = "0.3.33"
quick-xml = "0.41.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["arbitrary_precision", "preserve_order"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false }
zeroize = "1.8.1"

[workspace.lints.rust]
missing_docs = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(opendart_compat)'] }
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
