[package]
name = "opendart"
version = "0.1.0"
description = "First-party Rust SDK for preparing and inspecting OpenDART API interactions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/opendart"
readme = "README.md"
keywords = ["opendart", "dart", "finance", "openapi"]
categories = ["api-bindings"]
publish = false
include = ["src/**", "tests/**", "Cargo.toml", "README.md", "LICENSE"]

[features]
default = ["client-reqwest"]
client-reqwest = ["dep:reqwest"]

[dependencies]
form_urlencoded.workspace = true
secrecy.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.13.4"
optional = true
default-features = false
features = ["rustls", "stream"]

[dev-dependencies]
static_assertions = "1.1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
