[package]
name = "opendart"
version = "0.1.0"
description = "First-party Rust SDK for preparing and inspecting OpenDART API interactions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/opendart"
readme = "README.md"
keywords = ["opendart", "dart", "finance", "openapi"]
categories = ["api-bindings"]
publish = ["crates-io"]
include = ["src/**", "tests/**", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE"]

[features]
default = ["client-reqwest"]
client-reqwest = ["dep:bytes", "dep:futures-core", "dep:reqwest", "dep:tokio"]
serde-json = ["dep:serde", "serde_json/raw_value"]

[dependencies]
bytes = { workspace = true, optional = true }
form_urlencoded.workspace = true
futures-core = { workspace = true, optional = true }
quick-xml.workspace = true
secrecy.workspace = true
serde = { workspace = true, optional = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true, features = ["time"] }
zeroize.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies.reqwest]
version = "0.13.4"
optional = true
default-features = false
features = ["native-tls", "stream"]

[dev-dependencies]
h2 = "0.4.15"
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "native-tls", "rustls", "stream", "zstd"] }
serde.workspace = true
static_assertions = "1.1.0"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
